Spring Impelementation part-1

--- a/LibraryManagementSystem-Backend/pom.xml
+++ b/LibraryManagementSystem-Backend/pom.xml
@@ -43,9 +43,9 @@
             <version>10.2.0.4.0</version>
         </dependency>
         <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.13</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.2.RELEASE</version>
         </dependency>
     </dependencies>
     <build>
